# routes/scooters.js
@@ -2,7 +2,7 @@ const express = require('express');
 const router = express.Router();
 const Scooter = require('../controllers/Scooter');
 
-const {checkUser, checkUserOrAdmin} = require('../libs/jwt');
+const {checkUser, checkUserOrAdmin, checkAdmin} = require('../libs/jwt');
 
 router.get('/', checkUserOrAdmin, async (req, res, next) => {
     try {
@@ -18,6 +18,16 @@ router.put('/:id', checkUser, async (req, res, next) => {
     try {
         const {lat, lon} = req.body;
         const result = await Scooter.updateScooterCoords(req.user, lat, lon);
+        res.send(result);
+    } catch (err) {
+        next(err);
+    }
+});
+
+router.put('/:id/info', checkAdmin, async (req, res, next) => {
+    try {
+        const {viewed} = req.body;
+        const result = await Scooter.updateScooter(req.params.id, viewed);
         res.send(result);
     } catch (err) {
         next(err);
